--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mantine/core": "^8.3.5",
+    "@mantine/dates": "^8.3.5",
+    "@mantine/form": "^8.3.5",
+    "@mantine/hooks": "^8.3.5",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@types/node": "20.11.17",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
+    "dayjs": "^1.11.18",
     "geist": "1.2.2",
     "next": "canary",
     "next-mdx-remote": "^4.4.1",
